--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -273,12 +273,12 @@
                     <li class="team team-top name-details"><a href="javascript:void(0);">Jenna Coleman<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Love Hewitt<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Lauren Cohan<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Minka Kelly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Erin Moriarty<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
@@ -323,45 +323,45 @@
                 </ul>
                 <p class="group-details">Group F</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rt7" target="_blank">Lily Collins<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rt7" target="_blank">Lily Collins<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rt7" target="_blank">Jennifer Love Hewitt<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rt7" target="_blank">Lily James<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rt7" target="_blank">Lily James<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rdw" target="_blank">Alyssa Arce<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rdw" target="_blank">Alyssa Arce<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rdw" target="_blank">Lauren Cohan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rdw" target="_blank">Alejandra Guilmant<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rdw" target="_blank">Alejandra Guilmant<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5ryy" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5ryy" target="_blank">Nathalie Emmanuel<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5ryy" target="_blank">Penelope Cruz<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5ryy" target="_blank">Nathalie Emmanuel<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5ryy" target="_blank">Penelope Cruz<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rm5" target="_blank">Erin Moriarty<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rm5" target="_blank">Elisha Cuthbert<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rm5" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rm5" target="_blank">Elisha Cuthbert<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oi5rm5" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group G</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Wilde<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Alexa Bliss<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Paige Spiranac<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln9cc" target="_blank">Olivia Wilde<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln9cc" target="_blank">Alexa Bliss<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln9cc" target="_blank">Paige Spiranac<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Shakira<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Brie Larson<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Deborah Ann Woll<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln8j0" target="_blank">Shakira<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln8j0" target="_blank">Brie Larson<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln8j0" target="_blank">Deborah Ann Woll<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kat Dennings<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Elizabeth Turner<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Tiffani Thiessen<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln93n" target="_blank">Kat Dennings<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln93n" target="_blank">Elizabeth Turner<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln93n" target="_blank">Tiffani Thiessen<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Yvonne Strahovski<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Eiza Gonzalez<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kristin Kreuk<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln8v2" target="_blank">Yvonne Strahovski<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln8v2" target="_blank">Eiza Gonzalez<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oln8v2" target="_blank">Kristin Kreuk<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group H</p>
                  <ul class="matchup">
