--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -141,20 +141,20 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Ariana Grande<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otworu" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otworu" target="_blank">Ariana Grande<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp0t" target="_blank">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp0t" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Megan Fox<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp4" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp4" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Blunt<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwobk" target="_blank">Emily Blunt<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwobk" target="_blank">Isla Fisher<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
@@ -289,12 +289,12 @@
                     <li class="team team-top name-details"><a href="javascript:void(0);">Yvonne Strahovski<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Mary Elizabeth Winstead<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Willa Holland<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Eva Green<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND TWO -->
@@ -366,23 +366,23 @@
                  <p class="group-details">Group H</p>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48er" target="_blank">Mary Elizabeth Winstead<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48er" target="_blank">Leighton Meester<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48er" target="_blank">Dianna Agron<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48er" target="_blank">Leighton Meester<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48er" target="_blank">Dianna Agron<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48pk" target="_blank">Willa Holland<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48pk" target="_blank">Monica Bellucci<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48pk" target="_blank">Melissa Rauch<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48pk" target="_blank">Monica Bellucci<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq48pk" target="_blank">Melissa Rauch<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq486h" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq486h" target="_blank">Emily Vancamp<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq486h" target="_blank">Alex Morgan<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq486h" target="_blank">Emily Vancamp<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq486h" target="_blank">Alex Morgan<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq4bvx" target="_blank">Zoey Deutch<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq4bvx" target="_blank">Zoey Deutch<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq4bvx" target="_blank">Eva Green<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq4bvx" target="_blank">Sammi Giancola<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oq4bvx" target="_blank">Sammi Giancola<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->                          
