--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -142,47 +142,47 @@
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otworu" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otworu" target="_blank">Ariana Grande<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otworu" target="_blank">Ariana Grande<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp0t" target="_blank">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp0t" target="_blank">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp0t" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp4" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp4" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwp4" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwobk" target="_blank">Emily Blunt<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwobk" target="_blank">Emily Blunt<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/otwobk" target="_blank">Isla Fisher<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Lili Reinhart<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxshe5">Kristen Bell<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxshe5">Lili Reinhart<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Felicity Jones<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxsh9j">Felicity Jones<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxsh9j">Alison Brie<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kaya Scodelario<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxsh37">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxsh37">Kaya Scodelario<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Rachel Mcadams<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxsgw4">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/oxsgw4">Rachel Mcadams<span class="score">&nbsp;</span></a></li>
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
              <div class="round round-three current">
                 <div class="round-details">Round 3A<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">s
                     <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
